--- a/theme.css
+++ b/theme.css
@@ -20,7 +20,7 @@ FOLLOW THIS FORMAT:
 
 body {
     color: #FFFFFE;
-    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    font-family: 'Papyrus';
     background-color: black;
 }
 
