--- a/theme.css
+++ b/theme.css
@@ -19,6 +19,8 @@ FOLLOW THIS FORMAT:
 @font-face {
   font-family: BloodThirst;
   src: url(https://pdunny-utopia-theme.github.io/fonts/Blood Thirst.ttf);
+  src: url(https://pdunny-utopia-theme.github.io/fonts/BloodThirst.woff);
+  src: url(https://pdunny-utopia-theme.github.io/fonts/BloodThirst.woff2);
 }
 
 body {
